tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_with_execute_through_wrapper.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✅ [32m[32mCreated new worktree for [1mtest-exec[22m from [1mmain[22m at [1m[TMPDIR]/repo.test-exec[39m[22m[0m
🔄 [36m[36mExecuting (--execute):[39m[0m
[107m [0m  [2m[0m[2m[34mecho[0m[2m executed[0m
executed
