tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_with_hooks_zsh.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
🔄 [36mRunning post-create:[0m
[107m [0m  [1m[2m[34mecho[0m [2m[32m'Installing dependencies...'[0m[0m
Installing dependencies...
🔄 [36mRunning post-create:[0m
[107m [0m  [1m[2m[34mecho[0m [2m[32m'Building project...'[0m[0m
Building project...
✅ [32mCreated new worktree for [1m[32mfeature-hooks[0m[32m from [1m[32mmain[0m[32m at [1m[32m[TMPDIR]/test-repo.feature-hooks[0m[0m
🔄 [36mRunning post-start [1mserver[0m:[0m
[107m [0m  [1m[2m[34mecho[0m [2m[32m'Starting dev server on port 3000'[0m[0m
🔄 [36mRunning post-start [1mwatch[0m:[0m
[107m [0m  [1m[2m[34mecho[0m [2m[32m'Watching for file changes'[0m[0m
