tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_with_post_start_command_no_directive_leak.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✅ [32mCreated new worktree for [1m[32mfeature-with-hooks[0m[32m from [1m[32mmain[0m[32m at [1m[32m[TMPDIR]/test-repo.feature-with-hooks[0m[0m
🔄 [36mRunning post-start:[0m
[107m [0m  [1m[2m[34mecho[0m [2m[32m'test command executed'[0m[0m
