tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__wrapper_preserves_progress_messages.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✅ [32m[32mCreated new worktree for [1mfeature-bg[22m from [1mmain[22m at [1m[TMPDIR]/repo.feature-bg[39m[22m[0m
🔄 [36mRunning post-start:[0m
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'background task'[0m[2m[0m
