tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__zsh_completion_subcommands.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
config
step
hook
select
list
switch
remove
merge
